objects/Participant__c.object
<CustomObject>
    <fields>
        <fullName>FamilyCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>FamilyCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Tour__c</fullName>
        <label>School Tour</label>
        <referenceTo>School_Tour__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>